syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.buyan.colorgc.protocol";

message ClientRegisterRequest {
  string serviceName = 1;
}

message ClientRegisterResponse {
  string serviceName = 1;
  string serviceCode = 2;
}

service ClientRegisterService {
  rpc clientRegister (ClientRegisterRequest) returns (ClientRegisterResponse);
}